Add block styles service

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
 		"files": [
 			"core/core/config.php",
 			"core/app-core/config.php",
+			"packages/blocks-next/index.php",
 			"vendor/woocommerce/action-scheduler/action-scheduler.php"
 		]
 	},
