--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,4 +40,7 @@
     "[typescript]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[jsonc]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
