--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,11 +2,7 @@ name: Cypress e2e Component Tests
 
 on:
   pull_request:
-    types: [assigned]
-    branches:
-      - main
-      - next
-      - fixes
+    types: [ready_for_review, review_requested]
     paths:
       - "packages/components/src/**/*.tsx"
       - "packages/components/src/**/*.ts"
