--- a/.github/workflows/qa-build.yml
+++ b/.github/workflows/qa-build.yml
@@ -3,10 +3,12 @@ name: QA Build
 on:
   pull_request:
     types: [ labeled ]
+  pull_request_review:
+      types: [submitted]
 
 jobs:
   build:
-    if: ${{ github.event.label.name == 'qa ready' }}
+    if: github.event.label.name == 'qa ready' || github.event.review.state == 'APPROVED'
     name: "Build Zip For QA"
     runs-on: ubuntu-latest
     steps:
