--- a/packages/components-react/package.json
+++ b/packages/components-react/package.json
@@ -28,9 +28,9 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.2.1",
-		"@types/react": "^17.0.2",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"@types/react": "^18",
+		"react": "^18",
+		"react-dom": "^18",
 		"typescript": "^5.0.4"
 	}
 }
